--- a/index.html
+++ b/index.html
@@ -30,60 +30,53 @@
     </p>
   </section>
 
-  <!-- PORTRAIT PHOTO + TEACHING INFO -->
-  <section class="section-content split">
-    <div class="split-left">
-      <figure class="portrait">
-        <img src="img/onstage.webp" alt="Chris Bates on stage" />
-      </figure>
-    </div>
-    <div class="split-right">
-      <h2>Teaching Info</h2>
+  <!-- TEACHING INFO (Accordion) -->
+  <section id="teaching-info" class="section-content">
+    <h2>Teaching Info</h2>
 
-      <div class="accordion" id="teaching-accordion">
-        <!-- Singers -->
-        <div class="acc-item">
-          <button class="acc-trigger" aria-expanded="false" aria-controls="panel-singers" id="tab-singers">
-            <span>Singers</span>
-            <span class="chev" aria-hidden="true">▸</span>
-          </button>
-          <div class="acc-panel" id="panel-singers" role="region" aria-labelledby="tab-singers">
-            <p>
-              For my singers, we’ll firstly assess where you’re at, your strengths/weaknesses, and we’ll figure out together an appropriate plan
-              and practice regiment that will get you starting to sing your ideal songs! My curriculum covers the essentials –
-              breath control, placement, vocal execution, etc.
-            </p>
-          </div>
+    <div class="accordion" id="teaching-accordion">
+      <!-- Singers -->
+      <div class="acc-item">
+        <button class="acc-trigger" aria-expanded="false" aria-controls="panel-singers" id="tab-singers">
+          <span>Singers</span>
+          <span class="chev" aria-hidden="true">▸</span>
+        </button>
+        <div class="acc-panel" id="panel-singers" role="region" aria-labelledby="tab-singers">
+          <p>
+            For my singers, we’ll firstly assess where you’re at, your strengths/weaknesses, and we’ll figure out together an appropriate plan
+            and practice regiment that will get you starting to sing your ideal songs! My curriculum covers the essentials –
+            breath control, placement, vocal execution, etc.
+          </p>
         </div>
+      </div>
 
-        <!-- Guitarists -->
-        <div class="acc-item">
-          <button class="acc-trigger" aria-expanded="false" aria-controls="panel-guitar" id="tab-guitar">
-            <span>Guitarists</span>
-            <span class="chev" aria-hidden="true">▸</span>
-          </button>
-          <div class="acc-panel" id="panel-guitar" role="region" aria-labelledby="tab-guitar">
-            <p>
-              For my guitarists, a similar approach, we’ll see where you’re at, I’ll help you with chords, strumming, fingerpicking,
-              and general guidance on playing songs on guitar. For more advanced guitarists we’ll talk about how chords work,
-              and how you can start to hear them without needing chord charts.
-            </p>
-          </div>
+      <!-- Guitarists -->
+      <div class="acc-item">
+        <button class="acc-trigger" aria-expanded="false" aria-controls="panel-guitar" id="tab-guitar">
+          <span>Guitarists</span>
+          <span class="chev" aria-hidden="true">▸</span>
+        </button>
+        <div class="acc-panel" id="panel-guitar" role="region" aria-labelledby="tab-guitar">
+          <p>
+            For my guitarists, a similar approach, we’ll see where you’re at, I’ll help you with chords, strumming, fingerpicking,
+            and general guidance on playing songs on guitar. For more advanced guitarists we’ll talk about how chords work,
+            and how you can start to hear them without needing chord charts.
+          </p>
         </div>
+      </div>
 
-        <!-- Songwriters -->
-        <div class="acc-item">
-          <button class="acc-trigger" aria-expanded="false" aria-controls="panel-writers" id="tab-writers">
-            <span>Songwriters</span>
-            <span class="chev" aria-hidden="true">▸</span>
-          </button>
-          <div class="acc-panel" id="panel-writers" role="region" aria-labelledby="tab-writers">
-            <p>
-              For budding songwriters, this is always fun, we’ll talk about how to come up with your own chords progressions,
-              and strong lyrics to match. We’ll listen to pop artists and try to break down their hit songs and see where the magic comes from.
-              Ultimately, through your own songs, we’ll try to get you expressing yourself – which is what singing/making music is all about.
-            </p>
-          </div>
+      <!-- Songwriters -->
+      <div class="acc-item">
+        <button class="acc-trigger" aria-expanded="false" aria-controls="panel-writers" id="tab-writers">
+          <span>Songwriters</span>
+          <span class="chev" aria-hidden="true">▸</span>
+        </button>
+        <div class="acc-panel" id="panel-writers" role="region" aria-labelledby="tab-writers">
+          <p>
+            For budding songwriters, this is always fun, we’ll talk about how to come up with your own chords progressions,
+            and strong lyrics to match. We’ll listen to pop artists and try to break down their hit songs and see where the magic comes from.
+            Ultimately, through your own songs, we’ll try to get you expressing yourself – which is what singing/making music is all about.
+          </p>
         </div>
       </div>
     </div>
