--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
         </button>
         <div class="acc-panel" id="panel-singers" role="region" aria-labelledby="tab-singers">
           <p>
-            For my singers, we’ll firstly assess where you’re at, your strengths/weaknesses, and we’ll figure out together an appropriate plan
-            and practice regiment that will get you starting to sing your ideal songs! My curriculum covers the essentials –
-            breath control, placement, vocal execution, etc.
+            For my singers, we’ll firstly assess where you’re at, your strengths and weaknesses, and we’ll figure out together an appropriate plan
+            and practice regiment that will get you ready to sing your ideal songs! My curriculum covers the essentials –
+            breath control, placement, vocal execution, vocal health, etc.
           </p>
         </div>
       </div>
@@ -58,9 +58,8 @@
         </button>
         <div class="acc-panel" id="panel-guitar" role="region" aria-labelledby="tab-guitar">
           <p>
-            For my guitarists, a similar approach, we’ll see where you’re at, I’ll help you with chords, strumming, fingerpicking,
-            and general guidance on playing songs on guitar. For more advanced guitarists we’ll talk about how chords work,
-            and how you can start to hear them without needing chord charts.
+            For my guitarists, we’ll see where you’re at, I’ll help you with chords, strumming, fingerpicking,
+            and general guidance on playing songs on guitar. For more advanced guitarists we’ll talk about hearing music, and playing songs by ear!
           </p>
         </div>
       </div>
