Refactor index.html structure and content
Refactor HTML structure, replacing sections with header, main, and footer elements. Update navigation and hero section content.

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!-- index.html (replace your current file with this) -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -8,137 +9,78 @@
 </head>
 <body>
 
-  <!-- TOP BANNER -->
-  <section class="top-banner">
-    <h1>Chris Bates Music Tutoring</h1>
-  </section>
+  <header class="site-header">
+    <a class="logo" href="/">Chris Bates</a>
 
-  <!-- HERO (full-bleed image) -->
-  <section class="hero"></section>
+    <nav class="nav">
+      <a href="singing.html">Singing</a>
+      <a href="guitar.html">Guitar</a>
+      <a href="songwriting.html">Songwriting</a>
+      <a href="about.html">About</a>
+      <a href="reviews.html">Reviews</a>
+      <a href="contact.html" class="nav-cta">Contact</a>
+    </nav>
+  </header>
 
-  <!-- BIO -->
-  <section id="bio" class="section-content">
-    <h2>Bio</h2>
-    <p>
-      Hey! I’m Chris Bates (BMus), and I teach singing, guitar and songwriting, based on the North Shore.
-      As a child I learned the violin for a number of years, and at around age 13 I began to sing, play guitar and write songs.
-      Over the last few years I’ve released music online as an artist, and performed around Auckland.
-    </p>
-    <p>
-      I’ve tutored music for the last 5 or so years, both younger and older. It’s a great pleasure to help guide aspiring musicians on their journey.
-      All ages are welcome!
-    </p>
-  </section>
+  <main>
+    <section class="hero">
+      <div class="hero-inner">
+        <h1>Music lessons that actually move you forward.</h1>
+        <p class="hero-sub">
+          Singing, guitar & songwriting lessons on Auckland’s North Shore — personalised, practical, and built around the music you love.
+        </p>
 
-  <!-- TEACHING INFO (Accordion) -->
-  <section id="teaching-info" class="section-content">
-    <h2>Teaching Info</h2>
+        <div class="hero-actions">
+          <a class="btn primary" href="contact.html">Book a lesson</a>
+          <a class="btn" href="about.html">How I teach</a>
+        </div>
 
-    <div class="accordion" id="teaching-accordion">
-      <!-- Singers -->
-      <div class="acc-item">
-        <button class="acc-trigger" aria-expanded="false" aria-controls="panel-singers" id="tab-singers">
-          <span>Singers</span>
-          <span class="chev" aria-hidden="true">▸</span>
-        </button>
-        <div class="acc-panel" id="panel-singers" role="region" aria-labelledby="tab-singers">
-          <p>
-            For my singers, we’ll firstly assess where you’re at, your strengths and weaknesses, and we’ll figure out together an appropriate plan
-            and practice regiment that will get you ready to sing your ideal songs! My curriculum covers the essentials –
-            breath control, placement, vocal execution, vocal health, etc.
-          </p>
+        <div class="hero-badges">
+          <span>BMus</span>
+          <span>All ages welcome</span>
+          <span>Beginner → intermediate</span>
         </div>
       </div>
+    </section>
 
-      <!-- Guitarists -->
-      <div class="acc-item">
-        <button class="acc-trigger" aria-expanded="false" aria-controls="panel-guitar" id="tab-guitar">
-          <span>Guitarists</span>
-          <span class="chev" aria-hidden="true">▸</span>
-        </button>
-        <div class="acc-panel" id="panel-guitar" role="region" aria-labelledby="tab-guitar">
-          <p>
-            For my guitarists, we’ll see where you’re at, I’ll help you with chords, strumming, fingerpicking,
-            and general guidance on playing songs on guitar. For more advanced guitarists we’ll talk about hearing music, and playing songs by ear!
-          </p>
+    <section class="strip">
+      <div class="wrap strip-grid">
+        <div class="card">
+          <h2>Choose your focus</h2>
+          <p>Pick a path — or mix them together.</p>
+          <div class="card-links">
+            <a href="singing.html">Singing →</a>
+            <a href="guitar.html">Guitar →</a>
+            <a href="songwriting.html">Songwriting →</a>
+          </div>
+        </div>
+
+        <div class="card">
+          <h2>Quick contact</h2>
+          <p>Tell me your goals and what you’re working on — I’ll reply with times.</p>
+          <p><a href="mailto:itschrisbates@gmail.com">itschrisbates@gmail.com</a></p>
         </div>
       </div>
+    </section>
 
-      <!-- Songwriters -->
-      <div class="acc-item">
-        <button class="acc-trigger" aria-expanded="false" aria-controls="panel-writers" id="tab-writers">
-          <span>Songwriters</span>
-          <span class="chev" aria-hidden="true">▸</span>
-        </button>
-        <div class="acc-panel" id="panel-writers" role="region" aria-labelledby="tab-writers">
-          <p>
-            For budding songwriters, this is always fun, we’ll talk about how to come up with your own chords progressions,
-            and strong lyrics to match. We’ll listen to pop artists and try to break down their hit songs and see where the magic comes from.
-            Ultimately, through your own songs, we’ll try to get you expressing yourself – which is what singing/making music is all about.
-          </p>
+    <section class="image-break"></section>
+
+    <footer class="footer">
+      <div class="wrap footer-inner">
+        <div class="footer-left">
+          <strong>Chris Bates Music Tutoring</strong>
+          <div class="muted">Auckland • North Shore</div>
+        </div>
+
+        <div class="footer-right">
+          <a href="https://instagram.com/itschrisbates" target="_blank" rel="noopener">Instagram</a>
+          <a href="https://www.tiktok.com/@itschrisbates" target="_blank" rel="noopener">TikTok</a>
+          <a href="https://www.youtube.com/chrisbates" target="_blank" rel="noopener">YouTube</a>
+          <a href="https://chrisbates.co.nz/" target="_blank" rel="noopener">Artist site</a>
         </div>
       </div>
-    </div>
-  </section>
+    </footer>
+  </main>
 
-  <!-- EXISTING IMAGE (kept as-is) -->
-  <section class="image-break"></section>
-
-  <!-- CONTACT -->
-  <section id="contact" class="section-content tight-bottom">
-    <h2>Contact</h2>
-    <p>You can reach me at <a href="mailto:itschrisbates@gmail.com">itschrisbates@gmail.com</a></p>
-  </section>
-
-  <!-- FIND ME ONLINE -->
-  <section id="links" class="section-content tight-top">
-    <h2>Find Me Online</h2>
-    <ul class="social-row">
-      <li><a href="https://instagram.com/itschrisbates" target="_blank" rel="noopener">Instagram</a></li>
-      <li><a href="https://www.tiktok.com/@itschrisbates" target="_blank" rel="noopener">TikTok</a></li>
-      <li><a href="https://www.facebook.com/itschrisbates" target="_blank" rel="noopener">Facebook</a></li>
-      <li><a href="https://open.spotify.com/artist/1wMxoWB76tKp8gOJDGRxxJ" target="_blank" rel="noopener">Spotify</a></li>
-      <li><a href="https://music.apple.com/nz/artist/chris-bates/1483001799" target="_blank" rel="noopener">Apple Music</a></li>
-      <li><a href="https://www.youtube.com/chrisbates" target="_blank" rel="noopener">YouTube</a></li>
-      <li><a href="https://chrisbates.co.nz/" target="_blank" rel="noopener">Artist Website</a></li>
-    </ul>
-  </section>
-
-  <!-- Minimal JS for accordion (all closed by default) -->
-  <script>
-    const triggers = document.querySelectorAll('.acc-trigger');
-
-    function closeAll() {
-      triggers.forEach(b => {
-        b.setAttribute('aria-expanded', 'false');
-        const wrap = b.parentElement;
-        const panel = wrap.querySelector('.acc-panel');
-        const chev = wrap.querySelector('.chev');
-        panel.style.maxHeight = null;
-        chev.style.transform = 'rotate(0deg)';
-      });
-    }
-
-    triggers.forEach(btn => {
-      btn.addEventListener('click', () => {
-        const expanded = btn.getAttribute('aria-expanded') === 'true';
-        closeAll();
-        if (!expanded) {
-          btn.setAttribute('aria-expanded', 'true');
-          const panel = btn.parentElement.querySelector('.acc-panel');
-          const chev = btn.parentElement.querySelector('.chev');
-          panel.style.maxHeight = panel.scrollHeight + 'px';
-          chev.style.transform = 'rotate(90deg)';
-        }
-      });
-    });
-
-    window.addEventListener('resize', () => {
-      document.querySelectorAll('.acc-trigger[aria-expanded="true"]').forEach(btn => {
-        const panel = btn.parentElement.querySelector('.acc-panel');
-        panel.style.maxHeight = panel.scrollHeight + 'px';
-      });
-    });
-  </script>
 </body>
 </html>
