Revise index.html for better layout and navigation
Updated the structure and content of the index.html file to improve clarity and navigation.

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!-- index.html (replace your current file with this) -->
+<!-- index.html (ultra-simple, reference-style) -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -9,77 +9,33 @@
 </head>
 <body>
 
-  <header class="site-header">
-    <a class="logo" href="/">Chris Bates</a>
-
+  <header class="header">
     <nav class="nav">
-      <a href="singing.html">Singing</a>
-      <a href="guitar.html">Guitar</a>
-      <a href="songwriting.html">Songwriting</a>
-      <a href="about.html">About</a>
-      <a href="reviews.html">Reviews</a>
-      <a href="contact.html" class="nav-cta">Contact</a>
+      <div class="nav-left">
+        <a class="nav-link" href="reviews.html">Reviews</a>
+        <a class="nav-link" href="listen.html">Listen</a>
+      </div>
+
+      <a class="brand" href="/">CHRIS<br/>BATES</a>
+
+      <div class="nav-right">
+        <a class="nav-link" href="singing.html">Singing</a>
+        <a class="nav-link" href="guitar.html">Guitar</a>
+        <a class="nav-link" href="songwriting.html">Songwriting</a>
+        <a class="nav-link" href="about.html">Bio</a>
+        <a class="nav-link" href="contact.html">Contact</a>
+      </div>
     </nav>
   </header>
 
   <main>
     <section class="hero">
-      <div class="hero-inner">
-        <h1>Music lessons that actually move you forward.</h1>
-        <p class="hero-sub">
-          Singing, guitar & songwriting lessons on Auckland’s North Shore — personalised, practical, and built around the music you love.
-        </p>
-
-        <div class="hero-actions">
-          <a class="btn primary" href="contact.html">Book a lesson</a>
-          <a class="btn" href="about.html">How I teach</a>
-        </div>
-
-        <div class="hero-badges">
-          <span>BMus</span>
-          <span>All ages welcome</span>
-          <span>Beginner → intermediate</span>
-        </div>
+      <div class="hero-copy">
+        <h1>Music tutoring on Auckland’s North Shore.</h1>
+        <p>Singing, guitar & songwriting lessons — personalised and practical.</p>
+        <a class="cta" href="contact.html">Enquire</a>
       </div>
     </section>
-
-    <section class="strip">
-      <div class="wrap strip-grid">
-        <div class="card">
-          <h2>Choose your focus</h2>
-          <p>Pick a path — or mix them together.</p>
-          <div class="card-links">
-            <a href="singing.html">Singing →</a>
-            <a href="guitar.html">Guitar →</a>
-            <a href="songwriting.html">Songwriting →</a>
-          </div>
-        </div>
-
-        <div class="card">
-          <h2>Quick contact</h2>
-          <p>Tell me your goals and what you’re working on — I’ll reply with times.</p>
-          <p><a href="mailto:itschrisbates@gmail.com">itschrisbates@gmail.com</a></p>
-        </div>
-      </div>
-    </section>
-
-    <section class="image-break"></section>
-
-    <footer class="footer">
-      <div class="wrap footer-inner">
-        <div class="footer-left">
-          <strong>Chris Bates Music Tutoring</strong>
-          <div class="muted">Auckland • North Shore</div>
-        </div>
-
-        <div class="footer-right">
-          <a href="https://instagram.com/itschrisbates" target="_blank" rel="noopener">Instagram</a>
-          <a href="https://www.tiktok.com/@itschrisbates" target="_blank" rel="noopener">TikTok</a>
-          <a href="https://www.youtube.com/chrisbates" target="_blank" rel="noopener">YouTube</a>
-          <a href="https://chrisbates.co.nz/" target="_blank" rel="noopener">Artist site</a>
-        </div>
-      </div>
-    </footer>
   </main>
 
 </body>
