Update navigation links in index.html

--- a/index.html
+++ b/index.html
@@ -9,24 +9,23 @@
 </head>
 <body>
 
-  <header class="header">
-    <nav class="nav">
-      <div class="nav-left">
-        <a class="nav-link" href="reviews.html">Reviews</a>
-        <a class="nav-link" href="listen.html">Listen</a>
-      </div>
+<header class="header">
+  <nav class="nav">
+    <div class="nav-left">
+      <a class="nav-link" href="reviews.html">Reviews</a>
+      <a class="nav-link" href="singing.html">Singing Lessons</a>
+      <a class="nav-link" href="guitar.html">Guitar Lessons</a>
+    </div>
 
-      <a class="brand" href="/">CHRIS<br/>BATES</a>
+    <a class="brand" href="/">CHRIS BATES</a>
 
-      <div class="nav-right">
-        <a class="nav-link" href="singing.html">Singing</a>
-        <a class="nav-link" href="guitar.html">Guitar</a>
-        <a class="nav-link" href="songwriting.html">Songwriting</a>
-        <a class="nav-link" href="about.html">Bio</a>
-        <a class="nav-link" href="contact.html">Contact</a>
-      </div>
-    </nav>
-  </header>
+    <div class="nav-right">
+      <a class="nav-link" href="songwriting.html">Songwriting</a>
+      <a class="nav-link" href="listen.html">Listen</a>
+      <a class="nav-link" href="contact.html">Contact</a>
+    </div>
+  </nav>
+</header>
 
   <main>
     <section class="hero">
