Update navigation links in index.html

--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
   <nav class="nav">
     <div class="nav-left">
       <a class="nav-link" href="reviews.html">Reviews</a>
-      <a class="nav-link" href="singing.html">Singing Lessons</a>
-      <a class="nav-link" href="guitar.html">Guitar Lessons</a>
+      <a class="nav-link" href="lessons.html">Lessons</a>
+      <a class="nav-link" href="listen.html">Listen</a>
     </div>
 
     <a class="brand" href="/">CHRIS BATES</a>
 
     <div class="nav-right">
-      <a class="nav-link" href="songwriting.html">Songwriting</a>
-      <a class="nav-link" href="listen.html">Listen</a>
+      <a class="nav-link" href="gallery.html">Gallery</a>
+      <a class="nav-link" href="about.html">Biography</a>
       <a class="nav-link" href="contact.html">Contact</a>
     </div>
   </nav>
