Update hero section with new styling and text

--- a/index.html
+++ b/index.html
@@ -27,15 +27,16 @@
   </nav>
 </header>
 
-  <main>
-    <section class="hero">
-      <div class="hero-copy">
-        <h1>Music tutoring on Auckland’s North Shore.</h1>
-        <p>Singing, guitar & songwriting lessons — personalised and practical.</p>
-        <a class="cta" href="contact.html">Enquire</a>
-      </div>
-    </section>
-  </main>
+<section class="hero">
+  <div class="hero-copy">
+    <h1>MUSIC TUTORING ON AUCKLAND’S NORTH SHORE.</h1>
+    <p>Singing, guitar & songwriting lessons — personalised and practical.</p>
+
+    <div class="hero-actions">
+      <a class="cta cta-outline" href="contact.html">ENQUIRE</a>
+    </div>
+  </div>
+</section>
 
 </body>
 </html>
