--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!-- index.html (ultra-simple, reference-style) -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -9,34 +8,36 @@
 </head>
 <body>
 
-<header class="header">
-  <nav class="nav">
-    <div class="nav-left">
-      <a class="nav-link" href="reviews.html">Reviews</a>
-      <a class="nav-link" href="lessons.html">Lessons</a>
-      <a class="nav-link" href="listen.html">Listen</a>
-    </div>
+  <!-- HEADER -->
+  <header class="header">
+    <nav class="nav">
+      <div class="nav-left">
+        <a href="reviews.html" class="nav-link">Reviews</a>
+        <a href="lessons.html" class="nav-link">Lessons</a>
+        <a href="listen.html" class="nav-link">Listen</a>
+      </div>
 
-    <a class="brand" href="/">CHRIS BATES</a>
+      <a href="/" class="brand">Chris Bates</a>
 
-    <div class="nav-right">
-      <a class="nav-link" href="gallery.html">Gallery</a>
-      <a class="nav-link" href="about.html">Biography</a>
-      <a class="nav-link" href="contact.html">Contact</a>
-    </div>
-  </nav>
-</header>
+      <div class="nav-right">
+        <a href="gallery.html" class="nav-link">Gallery</a>
+        <a href="about.html" class="nav-link">Biography</a>
+        <a href="contact.html" class="nav-link">Contact</a>
+      </div>
+    </nav>
+  </header>
 
-<section class="hero">
-  <div class="hero-copy">
-    <h1>MUSIC TUTORING ON AUCKLAND’S NORTH SHORE.</h1>
-    <p>Singing, guitar & songwriting lessons — personalised and practical.</p>
+  <!-- HERO -->
+  <main>
+    <section class="hero">
+      <div class="hero-copy">
+        <h1>MUSIC TUTORING ON AUCKLAND’S NORTH SHORE.</h1>
+        <p>Singing, guitar & songwriting lessons — personalised and practical.</p>
 
-    <div class="hero-actions">
-      <a class="cta cta-outline" href="contact.html">ENQUIRE</a>
-    </div>
-  </div>
-</section>
+        <a href="contact.html" class="cta">ENQUIRE</a>
+      </div>
+    </section>
+  </main>
 
 </body>
 </html>
