Revise lesson descriptions for clarity and style
Updated content for clarity and engagement in the lessons section.

--- a/lessons.html
+++ b/lessons.html
@@ -8,7 +8,6 @@
 </head>
 <body>
 
-  <!-- HEADER (same as home) -->
   <header class="header">
     <nav class="nav">
       <div class="nav-left">
@@ -27,58 +26,49 @@
     </nav>
   </header>
 
-  <!-- MAIN CONTENT -->
   <main class="page">
     <div class="page-inner">
 
       <h1>Lessons</h1>
 
       <p class="intro">
-        I offer one-on-one music tutoring on Auckland’s North Shore, working with students of all skill levels.
-        My focus is on vocals, acoustic guitar, and songwriting — with lessons shaped around your goals and the music you care about.
+        One-on-one music tutoring on Auckland’s North Shore, for all skill levels.
+        I specialise in vocals, acoustic guitar, and songwriting — always tailored to your goals and the music you love.
       </p>
 
       <section class="lesson-block">
         <h2>Vocals</h2>
         <p>
-          Vocal lessons are completely personalised. We’ll look at where you’re at, what you want to sing,
-          and build the technique and confidence needed to get you there.
-          Sessions can cover things like breath control, vocal placement, vocal health,
-          and developing a stronger, more reliable voice — all applied directly to songs you enjoy singing.
+          Personalised vocal coaching focused on building technique and confidence. We’ll work on the fundamentals
+          (breath, placement, control, vocal health) and apply it directly to songs you want to sing.
         </p>
       </section>
 
       <section class="lesson-block">
-        <h2>Acoustic Guitar</h2>
+        <h2>Acoustic guitar</h2>
         <p>
-          Guitar lessons are practical and song-focused. Whether you’re just starting out or already playing,
-          we’ll work on chords, rhythm, fingerpicking, and learning songs in a way that feels natural and enjoyable.
-          For more experienced players, we can also look at developing your ear and playing with more confidence.
+          Practical, song-first lessons. We can cover chords, rhythm, fingerpicking, learning songs efficiently,
+          and (if you want) developing your ear and musical feel.
         </p>
       </section>
 
       <section class="lesson-block">
         <h2>Songwriting</h2>
         <p>
-          Songwriting lessons are about helping you find your own voice.
-          We’ll explore chord progressions, melody, lyrics, and structure,
-          and break down songs you love to understand what makes them work.
-          The goal is to help you express yourself honestly and creatively through your own music.
+          Write better songs and find your voice. We’ll explore chord progressions, melody, lyrics, structure,
+          and break down great songs to see what makes them work — then apply it to your own writing.
         </p>
       </section>
 
       <section class="lesson-block">
-        <h2>Lesson format</h2>
+        <h2>Format</h2>
         <p>
-          Lessons are one-on-one and available in 30, 45, or 60 minute sessions.
-          I teach on the North Shore and can travel depending on the situation — feel free to ask.
+          One-on-one lessons in 30, 45, or 60 minute sessions. Based on the North Shore — feel free to ask about location/travel.
         </p>
       </section>
 
       <div class="page-cta">
-        <p class="cta-text">
-          Feel free to flick me an email — I’d love to hear about you and your goals.
-        </p>
+        <p class="cta-text">Feel free to flick me an email — I’d love to hear about you and your goals.</p>
         <a href="contact.html" class="cta dark">Enquire</a>
       </div>
 
