Add music tutoring lessons to index.html
Added content for music tutoring services including vocals, acoustic guitar, and songwriting lessons.

--- a/lessons/index.html
+++ b/lessons/index.html
@@ -1,1 +1,80 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Lessons — Chris Bates</title>
+  <link rel="stylesheet" href="css/style.css" />
+</head>
+<body>
+
+  <header class="header">
+    <nav class="nav">
+      <div class="nav-left">
+        <a href="reviews.html" class="nav-link">Reviews</a>
+        <a href="lessons.html" class="nav-link">Lessons</a>
+        <a href="listen.html" class="nav-link">Listen</a>
+      </div>
+
+      <a href="/" class="brand">Chris Bates</a>
+
+      <div class="nav-right">
+        <a href="gallery.html" class="nav-link">Gallery</a>
+        <a href="about.html" class="nav-link">Biography</a>
+        <a href="contact.html" class="nav-link">Contact</a>
+      </div>
+    </nav>
+  </header>
+
+  <main class="page">
+    <div class="page-inner">
+
+      <h1>Lessons</h1>
+
+      <p class="intro">
+        One-on-one music tutoring on Auckland’s North Shore, for all skill levels.
+        I specialise in vocals, acoustic guitar, and songwriting — always tailored to your goals and the music you love.
+      </p>
+
+      <section class="lesson-block">
+        <h2>Vocals</h2>
+        <p>
+          Personalised vocal coaching focused on building technique and confidence. We’ll work on the fundamentals
+          (breath, placement, control, vocal health) and apply it directly to songs you want to sing.
+        </p>
+      </section>
+
+      <section class="lesson-block">
+        <h2>Acoustic guitar</h2>
+        <p>
+          Practical, song-first lessons. We can cover chords, rhythm, fingerpicking, learning songs efficiently,
+          and (if you want) developing your ear and musical feel.
+        </p>
+      </section>
+
+      <section class="lesson-block">
+        <h2>Songwriting</h2>
+        <p>
+          Write better songs and find your voice. We’ll explore chord progressions, melody, lyrics, structure,
+          and break down great songs to see what makes them work — then apply it to your own writing.
+        </p>
+      </section>
+
+      <section class="lesson-block">
+        <h2>Format</h2>
+        <p>
+          One-on-one lessons in 30, 45, or 60 minute sessions. Based on the North Shore — feel free to ask about location/travel.
+        </p>
+      </section>
+
+      <div class="page-cta">
+        <p class="cta-text">Feel free to flick me an email — I’d love to hear about you and your goals.</p>
+        <a href="contact.html" class="cta dark">Enquire</a>
+      </div>
+
+    </div>
+  </main>
+
+</body>
+</html>
 
