--- a/index.html
+++ b/index.html
@@ -11,17 +11,17 @@
   <header class="header">
     <nav class="nav">
       <div class="nav-left">
-        <a href="reviews.html" class="nav-link">Reviews</a>
-        <a href="lessons.html" class="nav-link">Lessons</a>
-        <a href="listen.html" class="nav-link">Listen</a>
+        <a href="/reviews" class="nav-link">Reviews</a>
+        <a href="/lessons" class="nav-link">Lessons</a>
+        <a href="/listen" class="nav-link">Listen</a>
       </div>
 
       <a href="/" class="brand">Chris Bates</a>
 
       <div class="nav-right">
-        <a href="gallery.html" class="nav-link">Gallery</a>
-        <a href="about.html" class="nav-link">Biography</a>
-        <a href="contact.html" class="nav-link">Contact</a>
+        <a href="/gallery" class="nav-link">Gallery</a>
+        <a href="/about" class="nav-link">Biography</a>
+        <a href="/contact" class="nav-link">Contact</a>
       </div>
     </nav>
   </header>
