--- a/listen/index.html
+++ b/listen/index.html
@@ -1,1 +1,95 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Listen — Chris Bates</title>
+  <link rel="stylesheet" href="/css/style.css">
+</head>
+<body>
 
+  <!-- HEADER -->
+  <header class="header">
+    <nav class="nav">
+      <div class="nav-left">
+        <a href="/reviews" class="nav-link">Reviews</a>
+        <a href="/lessons" class="nav-link">Lessons</a>
+        <a href="/listen" class="nav-link">Listen</a>
+      </div>
+
+      <a href="/" class="brand">Chris Bates</a>
+
+      <div class="nav-right">
+        <a href="/gallery" class="nav-link">Gallery</a>
+        <a href="/biography" class="nav-link">Biography</a>
+        <a href="/contact" class="nav-link">Contact</a>
+      </div>
+    </nav>
+  </header>
+
+  <!-- PAGE CONTENT -->
+  <main class="page">
+    <div class="page-inner">
+
+      <h1>Listen</h1>
+
+      <p class="intro">
+        A few examples of my music and playing.
+      </p>
+
+      <!-- FEATURED LINK -->
+      <section class="lesson-block">
+        <h2>Latest release</h2>
+        <p>
+          You can find my most recent project and music across all streaming platforms here:
+          <br><br>
+          <a href="https://music.drm.co.nz/sasn-cb" target="_blank" rel="noopener">
+            music.drm.co.nz/sasn-cb
+          </a>
+        </p>
+      </section>
+
+      <!-- VIDEO 1 -->
+      <section class="lesson-block">
+        <h2>Caution to the Wind</h2>
+        <div style="position:relative;padding-top:56.25%;">
+          <iframe
+            src="https://www.youtube.com/embed/f2vePk17mhs"
+            style="position:absolute;top:0;left:0;width:100%;height:100%;border:0;"
+            allowfullscreen
+            loading="lazy">
+          </iframe>
+        </div>
+      </section>
+
+      <!-- VIDEO 2 -->
+      <section class="lesson-block">
+        <h2>Do You Think of Me Sometimes?</h2>
+        <div style="position:relative;padding-top:56.25%;">
+          <iframe
+            src="https://www.youtube.com/embed/t4NH2hmoAu4"
+            style="position:absolute;top:0;left:0;width:100%;height:100%;border:0;"
+            allowfullscreen
+            loading="lazy">
+          </iframe>
+        </div>
+      </section>
+
+      <!-- VIDEO 3 -->
+      <section class="lesson-block">
+        <h2>Still the One (cover)</h2>
+        <div style="position:relative;padding-top:56.25%;">
+          <iframe
+            src="https://www.youtube.com/embed/2JGCoYg67O8"
+            style="position:absolute;top:0;left:0;width:100%;height:100%;border:0;"
+            allowfullscreen
+            loading="lazy">
+          </iframe>
+        </div>
+      </section>
+
+    </div>
+  </main>
+
+</body>
+</html>
