--- a/lessons/index.html
+++ b/lessons/index.html
@@ -19,9 +19,9 @@
       <a href="/" class="brand">Chris Bates</a>
 
       <div class="nav-right">
-        <a href="gallery.html" class="nav-link">Gallery</a>
-        <a href="about.html" class="nav-link">Biography</a>
-        <a href="contact.html" class="nav-link">Contact</a>
+        <a href="/gallery" class="nav-link">Gallery</a>
+        <a href="/about" class="nav-link">Biography</a>
+        <a href="/contact" class="nav-link">Contact</a>
       </div>
     </nav>
   </header>
