Update navigation links to use relative paths

--- a/lessons/index.html
+++ b/lessons/index.html
@@ -11,9 +11,9 @@
   <header class="header">
     <nav class="nav">
       <div class="nav-left">
-        <a href="reviews.html" class="nav-link">Reviews</a>
-        <a href="lessons.html" class="nav-link">Lessons</a>
-        <a href="listen.html" class="nav-link">Listen</a>
+        <a href="/reviews" class="nav-link">Reviews</a>
+        <a href="/lessons" class="nav-link">Lessons</a>
+        <a href="/listen" class="nav-link">Listen</a>
       </div>
 
       <a href="/" class="brand">Chris Bates</a>
