Update video title for 'Still the One' section

--- a/listen/index.html
+++ b/listen/index.html
@@ -77,7 +77,7 @@
 
       <!-- VIDEO 3 -->
       <section class="lesson-block">
-        <h2>Still the One (cover)</h2>
+        <h2>Still the One (Shania Twain)</h2>
         <div style="position:relative;padding-top:56.25%;">
           <iframe
             src="https://www.youtube.com/embed/2JGCoYg67O8"
