Update link text for streaming platforms

--- a/listen/index.html
+++ b/listen/index.html
@@ -44,7 +44,7 @@
           You can find my most recent project and music across all streaming platforms here:
           <br><br>
           <a href="https://music.drm.co.nz/sasn-cb" target="_blank" rel="noopener">
-            music.drm.co.nz/sasn-cb
+            Listen on streaming platforms
           </a>
         </p>
       </section>
