Add initial HTML structure for gallery page

--- a/gallery/index.html
+++ b/gallery/index.html
@@ -1,1 +1,46 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Gallery — Chris Bates</title>
+  <link rel="stylesheet" href="/css/style.css" />
+</head>
+<body>
 
+  <header class="header">
+    <nav class="nav">
+      <div class="nav-left">
+        <a href="/reviews" class="nav-link">Reviews</a>
+        <a href="/lessons" class="nav-link">Lessons</a>
+        <a href="/listen" class="nav-link">Listen</a>
+      </div>
+
+      <a href="/" class="brand">Chris Bates</a>
+
+      <div class="nav-right">
+        <a href="/gallery" class="nav-link">Gallery</a>
+        <a href="/biography" class="nav-link">Biography</a>
+        <a href="/contact" class="nav-link">Contact</a>
+      </div>
+    </nav>
+  </header>
+
+  <main class="page">
+    <div class="page-inner">
+      <h1>Gallery</h1>
+
+      <div class="gallery-grid">
+        <img src="/img/performing.webp" alt="Chris Bates performing live">
+        <img src="/img/emotion.webp" alt="Chris Bates performing live">
+        <img src="/img/colours.webp" alt="Chris Bates portrait">
+        <img src="/img/meandjono.webp" alt="Chris Bates and bandmate">
+        <img src="/img/jono.webp" alt="Portrait of bandmate">
+        <img src="/img/dan.webp" alt="Band performance">
+      </div>
+
+    </div>
+  </main>
+
+</body>
+</html>
