--- a/gallery/index.html
+++ b/gallery/index.html
@@ -30,14 +30,19 @@
     <div class="page-inner">
       <h1>Gallery</h1>
 
-      <div class="gallery-grid">
-        <img src="/img/performing.webp" alt="Chris Bates performing live">
-        <img src="/img/emotion.webp" alt="Chris Bates performing live">
-        <img src="/img/colours.webp" alt="Chris Bates portrait">
-        <img src="/img/meandjono.webp" alt="Chris Bates and bandmate">
-        <img src="/img/jono.webp" alt="Portrait of bandmate">
-        <img src="/img/dan.webp" alt="Band performance">
-      </div>
+ <div class="gallery-grid">
+  <!-- Row 1 -->
+  <img src="/img/handsup.webp" alt="Chris Bates performing live">
+  <img src="/img/emotion.webp" alt="Chris Bates performing live">
+
+  <!-- Row 2 (portraits split evenly) -->
+  <img src="/img/colours.webp" alt="Chris Bates portrait">
+  <img src="/img/jono.webp" alt="Portrait of bandmate">
+
+  <!-- Row 3 -->
+  <img src="/img/meandjono.webp" alt="Chris Bates and bandmate">
+  <img src="/img/dan.webp" alt="Band performance">
+</div>
 
     </div>
   </main>
