--- a/biography/index.html
+++ b/biography/index.html
@@ -1,1 +1,61 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Biography — Chris Bates</title>
+  <link rel="stylesheet" href="/css/style.css" />
+</head>
+<body>
 
+  <header class="header">
+    <nav class="nav">
+      <div class="nav-left">
+        <a href="/reviews" class="nav-link">Reviews</a>
+        <a href="/lessons" class="nav-link">Lessons</a>
+        <a href="/listen" class="nav-link">Listen</a>
+      </div>
+
+      <a href="/" class="brand">Chris Bates</a>
+
+      <div class="nav-right">
+        <a href="/gallery" class="nav-link">Gallery</a>
+        <a href="/biography" class="nav-link">Biography</a>
+        <a href="/contact" class="nav-link">Contact</a>
+      </div>
+    </nav>
+  </header>
+
+  <main class="page">
+    <div class="page-inner">
+
+      <h1>Biography</h1>
+
+      <div class="bio-layout">
+        <div class="bio-image">
+          <img src="/img/green.webp" alt="Chris Bates portrait">
+        </div>
+
+        <div class="bio-text">
+          <p>
+            Chris Bates is a 27-year-old musician, songwriter, and music tutor based in Auckland,
+            New Zealand. He holds a Bachelor of Music in Popular Music from the University of Auckland
+            and has a background in classical music, which informs his strong technical foundation.
+            Working across singing, guitar, and songwriting, he is an active recording and performing
+            artist who regularly releases original music.
+          </p>
+
+          <p>
+            As a tutor, Chris focuses on personalised lessons tailored to each student’s goals,
+            working with beginners through to more advanced musicians. His tuition is centred on
+            helping students develop real musical skills and creative confidence they can use in
+            the real world.
+          </p>
+        </div>
+      </div>
+
+    </div>
+  </main>
+
+</body>
+</html>
