--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
       <div class="nav-right">
         <a href="/gallery" class="nav-link">Gallery</a>
-        <a href="/about" class="nav-link">Biography</a>
+        <a href="/biography" class="nav-link">Biography</a>
         <a href="/contact" class="nav-link">Contact</a>
       </div>
     </nav>
