--- a/contact/index.html
+++ b/contact/index.html
@@ -1,1 +1,50 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Contact — Chris Bates</title>
+  <link rel="stylesheet" href="/css/style.css" />
+</head>
+<body>
 
+  <header class="header">
+    <nav class="nav">
+      <div class="nav-left">
+        <a href="/reviews" class="nav-link">Reviews</a>
+        <a href="/lessons" class="nav-link">Lessons</a>
+        <a href="/listen" class="nav-link">Listen</a>
+      </div>
+
+      <a href="/" class="brand">Chris Bates</a>
+
+      <div class="nav-right">
+        <a href="/gallery" class="nav-link">Gallery</a>
+        <a href="/biography" class="nav-link">Biography</a>
+        <a href="/contact" class="nav-link">Contact</a>
+      </div>
+    </nav>
+  </header>
+
+  <main class="page">
+    <div class="page-inner">
+      <h1>Contact</h1>
+
+      <p class="intro">
+        Feel free to flick me an email — I’d love to hear about you and your goals.
+      </p>
+
+      <section class="lesson-block">
+        <p>
+          <a href="mailto:itschrisbates@gmail.com">itschrisbates@gmail.com</a>
+        </p>
+
+        <div class="page-cta">
+          <a class="cta dark" href="mailto:itschrisbates@gmail.com?subject=Music%20lessons%20enquiry">ENQUIRE</a>
+        </div>
+      </section>
+    </div>
+  </main>
+
+</body>
+</html>
