--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Chris Bates — Music Tutoring</title>
-
   <link rel="stylesheet" href="/css/style.css" />
 </head>
 <body>
@@ -31,8 +30,8 @@
     <section class="hero">
       <div class="hero-copy">
         <h1>MUSIC TUTORING ON AUCKLAND’S NORTH SHORE.</h1>
-        <p>Singing, guitar & songwriting lessons — personalised and practical.</p>
-        <a href="contact.html" class="cta">ENQUIRE</a>
+        <p>Singing, guitar &amp; songwriting lessons — personalised and practical.</p>
+        <a href="/contact" class="cta">ENQUIRE</a>
       </div>
     </section>
   </main>
