--- a/contact/index.html
+++ b/contact/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Contact — Chris Bates</title>
+
   <link rel="stylesheet" href="/css/style.css" />
 </head>
 <body>
@@ -28,21 +29,17 @@
 
   <main class="page">
     <div class="page-inner">
+
       <h1>Contact</h1>
 
       <p class="intro">
         Feel free to flick me an email — I’d love to hear about you and your goals.
       </p>
 
-      <section class="lesson-block">
-        <p>
-          <a href="mailto:itschrisbates@gmail.com">itschrisbates@gmail.com</a>
-        </p>
+      <div class="page-cta">
+        <a href="mailto:itschrisbates@gmail.com" class="cta dark">Enquire</a>
+      </div>
 
-        <div class="page-cta">
-          <a class="cta dark" href="mailto:itschrisbates@gmail.com?subject=Music%20lessons%20enquiry">ENQUIRE</a>
-        </div>
-      </section>
     </div>
   </main>
 
